# kerf

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: lint_and_test.yml  pylint.yml
docs/: CPU_NUMA_TOPOLOGY.md
examples/: bad_system.dts  baseline.dts  conflict_example.dts  edge_computing.dts  high_performance.dts  minimal.dts  numa_topology.dts  simple_numa.dts  system.dts
src/init/: Makefile  init.c
src/kerf/: __init__.py  baseline.py  cli.py  exceptions.py  initrd.py  models.py  resources.py  runtime.py  utils.py
src/kerf/console/: __init__.py  main.py
src/kerf/create/: __init__.py  main.py
src/kerf/data/: __init__.py
src/kerf/daxfs/: __init__.py  mkdaxfs.py
src/kerf/delete/: __init__.py  main.py
src/kerf/docker/: __init__.py  image.py
src/kerf/dtc/: __init__.py  extractor.py  main.py  overlay.py  parser.py  reporter.py  validator.py
src/kerf/exec/: __init__.py  main.py
src/kerf/fuse/: __init__.py  server.py
src/kerf/init/: __init__.py  main.py
src/kerf/kill/: __init__.py  main.py
src/kerf/load/: __init__.py  main.py
src/kerf/show/: __init__.py  main.py
src/kerf/unload/: __init__.py  main.py
src/kerf/update/: __init__.py  main.py
tests/: __init__.py  conftest.py  create_test_dtb.py  demo.py  test_baseline.py  test_kerf.py  test_models.py  test_parser.py  test_resources.py  test_runtime.py  test_utils.py  test_validator.py
