[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kerf"
version = "0.1.0"
description = "Multikernel Management CLI tool"
authors = ["Cong Wang"]
readme = "README.md"
packages = [{include = "kerf", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pylibfdt = "^1.7.0"
click = "^8.0.0"
pyyaml = "^6.0"
pyudev = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^22.0.0"
flake8 = "^5.0.0"
mypy = "^1.0.0"
pylint = "^3.0.0"

[tool.poetry.scripts]
kerf = "kerf.cli:main"

[tool.pylint.main]
py-version = "3.9"
jobs = 0
ignore-patterns = ["^\\.#"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "line-too-long",
    "duplicate-code",
    "too-many-nested-blocks",
    "too-many-positional-arguments",
    "too-many-return-statements",
    "too-many-instance-attributes",
    "too-many-lines",
    "fixme",
    "import-outside-toplevel",
    "broad-exception-caught",
    "no-value-for-parameter",
    "redefined-builtin",
    "too-many-public-methods",
    "broad-except",
    "inconsistent-return-statements",
]

[tool.pylint.format]
max-line-length = 100
indent-string = "    "

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "fd", "dt", "id", "e", "f"]

[tool.pylint.design]
max-attributes = 10
max-returns = 6
